Fix ViewHeader align bug

--- a/app/src/components/ViewHeader/ViewHeader.css
+++ b/app/src/components/ViewHeader/ViewHeader.css
@@ -1,6 +1,5 @@
 .ViewHeader {
   display: flex;
-  justify-content: space-between;
   margin-bottom: 2em;
 }
 
